--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>BrewMate</title>
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <!-- ✅ Google Font: Barlow -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- ✅ Meta Tags -->
+    <title>BrewMate – AI Brewing Assistant</title>
+    <meta name="title" content="BrewMate – AI Brewing Assistant" />
+    <meta name="description" content="BrewMate helps homebrewers craft smarter recipes with AI. Save, refine, and brew confidently." />
+
+    <!-- ✅ Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://brewmate.vercel.app/" />
+    <meta property="og:title" content="BrewMate – AI Brewing Assistant" />
+    <meta property="og:description" content="BrewMate helps homebrewers craft smarter recipes with AI. Save, refine, and brew confidently." />
+    <meta property="og:image" content="https://brewmate.vercel.app/og-preview.png" />
+
+    <!-- ✅ Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://brewmate.vercel.app/" />
+    <meta property="twitter:title" content="BrewMate – AI Brewing Assistant" />
+    <meta property="twitter:description" content="BrewMate helps homebrewers craft smarter recipes with AI. Save, refine, and brew confidently." />
+    <meta property="twitter:image" content="https://brewmate.vercel.app/og-preview.png" />
   </head>
   <body>
     <div id="root"></div>
